# tap-betterstack

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml
.github/workflows/: build.yaml  constraints.txt  release.yaml  test.yaml  test.yml
tap_betterstack/: __init__.py  __main__.py  client.py  tap.py
tap_betterstack/streams/: __init__.py  uptime.py
tests/: test_core.py
