[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-betterstack"
description = "Singer tap for Better Stack, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Better Stack",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
license-files = [
  "LICENSE",
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.53.2",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-betterstack = "tap_betterstack.tap:TapBetterStack.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-betterstack#readme"
Homepage = "https://github.com/reservoir-data/tap-betterstack"
Repository = "https://github.com/reservoir-data/tap-betterstack"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
ci = [
  "pytest-github-actions-annotate-failures>=0.3",
]
testing = [
  "deptry>=0.12",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=1.19.1",
  "ty>=0.0.19",
  "types-requests",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.ruff]
required-version = ">=0.15"
line-length = 88
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "INP001", # implicit-namespace-package
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "--strict-config",
  "--strict-markers",
  "-ra",
]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.43"
requires = [ "tox", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_betterstack", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_betterstack", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_BETTERSTACK_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
